--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.cardGrid{
+    background-color: black;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100vw;
+}
+.full-width{  
+    width: 100vw;
+    grid-column: 1 / 3;
+    margin: -1px;
+}
+.half-width{  
+    width: 50vw;
+    margin: -1px;
+}
+.card-img:hover{
+    transition: 0.7s;
+    border-radius: 10px;
+    transform: scale(1.01);
+    background-color: rgba(0,0,0,0.8);
+    background-image:url(http://www.gelfuzion.com/img/slides/nivo/bg-1.jpg);
+    filter:brightness(0.4);   
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header{
+    padding: 10vh;
+    text-align: center;
+    color: aliceblue;
+    font-size: larger;
+    background-color: rgb(0, 0, 0);
+}
+.title{
+    color: aliceblue;
+    position: absolute;
+    margin-top: -200px;
+    margin-left: 150px;
+}
+.desc{
+    color: aliceblue;
+    position: absolute;
+    margin-top: -150px;
+    margin-left: 150px;
 }
