--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,18 @@ body{
     background-color: black;
     text-align: center;
 }
+@media (max-width: 756px){
+    .title{
+        margin-top: -130px;
+        margin-left: 50px;
+    }
+    .desc{
+        margin-top: -95px;
+        margin-left: 50px;
+    }
+    .btn{
+        margin-top: -90px;
+        margin-left: 50px; 
+        padding: 5px !important;
+    }
+}
